--- a/DLUTToolBoxV3/Pages/SettingsPage.xaml
+++ b/DLUTToolBoxV3/Pages/SettingsPage.xaml
@@ -1,4 +1,4 @@
-<!-- Copyright (c) Microsoft Corporation and Contributors. -->
+﻿<!-- Copyright (c) Microsoft Corporation and Contributors. -->
 <!-- Licensed under the MIT License. -->
 
 <Page
@@ -8,10 +8,112 @@
     xmlns:local="using:DLUTToolBoxV3.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:WinUICommunity.SettingsUI.Controls"
+    xmlns:labs="using:WinUICommunity.SettingsUI.SettingsControls"
+    xmlns:converters="using:DLUTToolBoxV3.Converters"
     mc:Ignorable="d"
+    Loaded="Page_Loaded"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.Resources>
+        <converters:VisibilityBoolenConverter x:Key="VisibilityBoolenConverter"/>
+    </Page.Resources>
 
-    <Grid>
-
-    </Grid>
+    <ScrollViewer>
+        <StackPanel x:Name="SourceElement" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Loaded="SourceElement_Loaded" Margin="24,16,24,24">
+            <controls:SettingsGroup Header="统一认证信息" Margin="4,-24,4,4">
+                <labs:SettingsCard
+                    Header="学工号">
+                    <labs:SettingsCard.HeaderIcon>
+                        <FontIcon Glyph="&#xe716;" />
+                    </labs:SettingsCard.HeaderIcon>
+                    <TextBox x:Name="Uid" Width="300" InputScope="Number" TextChanged="Uid_TextChanged"/>
+                </labs:SettingsCard>
+                <labs:SettingsCard
+                    Header="密码">
+                    <labs:SettingsCard.HeaderIcon>
+                        <FontIcon Glyph="&#xf7b5;" Width="14" Height="14"/>
+                    </labs:SettingsCard.HeaderIcon>
+                    <PasswordBox x:Name="Password" Width="300" PasswordChanged="Password_PasswordChanged" IsPasswordRevealButtonEnabled="True" PasswordRevealMode="Peek"/>
+                </labs:SettingsCard>
+            </controls:SettingsGroup>
+            <controls:SettingsGroup Header="程序主题" Margin="4,-24,4,4">
+                <labs:SettingsCard
+                Header="全局主题模式">
+                    <labs:SettingsCard.HeaderIcon>
+                        <FontIcon Glyph="&#xe771;" />
+                    </labs:SettingsCard.HeaderIcon>
+                    <ComboBox x:Name="ThemePanel" SelectionChanged="ThemePanel_SelectionChanged">
+                        <ComboBoxItem Tag="Light" Content="浅色"/>
+                        <ComboBoxItem Tag="Dark" Content="深色" />
+                        <ComboBoxItem Tag="Default" Content="跟随系统" x:Name="Default"/>
+                    </ComboBox>
+                    <labs:SettingsCard.Description>
+                        <HyperlinkButton Content="点此打开系统主题设置" Click="HyperlinkButton_Click" Visibility="{x:Bind Default.IsSelected,Mode=OneWay, Converter={StaticResource VisibilityBoolenConverter}}"/>
+                    </labs:SettingsCard.Description>
+                </labs:SettingsCard>
+            </controls:SettingsGroup>
+            <controls:SettingsGroup Header="杂项" Margin="4,-24,4,4">
+                <labs:SettingsCard
+                    Header="清除WebViewCookie">
+                    <labs:SettingsCard.HeaderIcon>
+                        <FontIcon Glyph="&#xe74d;"/>
+                    </labs:SettingsCard.HeaderIcon>
+                    <Button 
+                        HorizontalAlignment="Right"
+                        Content="点击清除"
+                    Click="Button_Click"/>
+                </labs:SettingsCard>
+                <labs:SettingsCard
+                    Header="打开日志文件夹">
+                    <labs:SettingsCard.HeaderIcon>
+                        <FontIcon Glyph="&#xe8b7;"/>
+                    </labs:SettingsCard.HeaderIcon>
+                    <Button 
+                        HorizontalAlignment="Right"
+                        Content="打开文件夹"/>
+                </labs:SettingsCard>
+                <controls:Setting 
+                        Header="{x:Bind Version}"
+                        Icon="&#xE117;">
+                    <controls:Setting.Description>
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Style="{StaticResource SecondaryTextStyle}" >
+                               <Run Text="上次检查更新" />
+                               <Run x:Name="LastUpdateCheckDate"/>
+                            </TextBlock>
+                            <HyperlinkButton 
+                                Margin="0,2,0,0"
+                                Content="发行说明"
+                                NavigateUri="https://github.com/IShiraiKurokoI/DLUTToolBoxV3/releases" />
+                        </StackPanel>
+                    </controls:Setting.Description>
+                    <controls:Setting.ActionContent>
+                        <StackPanel 
+                             VerticalAlignment="Center"
+                             Orientation="Horizontal"
+                             Spacing="18">
+                            <StackPanel
+                                Orientation="Horizontal"
+                                Spacing="18"
+                                x:Name="Checking"
+                                Visibility="Collapsed">
+                                <ProgressRing 
+                                     Width="24"
+                                     Height="24" />
+                                <TextBlock 
+                                     VerticalAlignment="Center"
+                                     FontWeight="SemiBold"
+                                     Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                     Text="正在检查更新"/>
+                            </StackPanel>
+                            <Button 
+                                HorizontalAlignment="Right"
+                                Content="检查更新" 
+                                Click="Button_Click_1"/>
+                        </StackPanel>
+                    </controls:Setting.ActionContent>
+                </controls:Setting>
+            </controls:SettingsGroup>
+        </StackPanel>
+    </ScrollViewer>
 </Page>
