--- a/DLUTToolBoxV3/ShellPage.xaml
+++ b/DLUTToolBoxV3/ShellPage.xaml
@@ -117,6 +117,7 @@
 
             <NavigationView.FooterMenuItems>
                 <NavigationViewItem 
+                    x:Name="Settings"
                     Content="参数配置"
                     helpers:NavHelper.NavigateTo="views:SettingsPage">
                     <NavigationViewItem.Icon>
