--- a/DLUTToolBoxV3/Pages/AboutPage.xaml
+++ b/DLUTToolBoxV3/Pages/AboutPage.xaml
@@ -80,6 +80,8 @@
                                     <HyperlinkButton Content="Microsoft/WindowsAppSDK" NavigateUri="https://github.com/microsoft/windowsappsdk"  Margin="5" FontSize="18"/>
                                     <HyperlinkButton Content="WinUICommunity/Common" NavigateUri="https://github.com/WinUICommunity/Common"  Margin="5" FontSize="18"/>
                                     <HyperlinkButton Content="WinUICommunity/SettingsUI" NavigateUri="https://github.com/WinUICommunity/SettingsUI"  Margin="5" FontSize="18"/>
+                                    <HyperlinkButton Content="Newtonsoft/Json" NavigateUri="https://www.newtonsoft.com/json"  Margin="5" FontSize="18"/>
+                                    <HyperlinkButton Content="NLog" NavigateUri="https://nlog-project.org/"  Margin="5" FontSize="18"/>
                                 </StackPanel>
                             </ScrollViewer>
                         </labs:SettingsCard.Description>
