--- a/DLUTToolBoxV3/Pages/EhallPage.xaml
+++ b/DLUTToolBoxV3/Pages/EhallPage.xaml
@@ -9,6 +9,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    NavigationCacheMode="Enabled"
     Background="Transparent">
     <Grid ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden"  x:Name="SourceElement">
         <Grid.RowDefinitions>
