--- a/DLUTToolBoxV3/Pages/NetworkPage.xaml
+++ b/DLUTToolBoxV3/Pages/NetworkPage.xaml
@@ -1,4 +1,4 @@
-<!-- Copyright (c) Microsoft Corporation and Contributors. -->
+﻿<!-- Copyright (c) Microsoft Corporation and Contributors. -->
 <!-- Licensed under the MIT License. -->
 
 <Page
@@ -6,12 +6,102 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DLUTToolBoxV3.Pages"
+    xmlns:localControls="using:DLUTToolBoxV3.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:localEntities="using:DLUTToolBoxV3.Entities"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    <Grid>
-
-    </Grid>
+    NavigationCacheMode="Enabled"
+    Background="Transparent"
+    Loaded="Page_Loaded">
+    <StackPanel VerticalAlignment="Stretch">
+        <StackPanel Orientation="Horizontal">
+            <localControls:AppButton
+                Title="校园网状态"
+                Subtitle="CERNET各出入口线路负载状态监视图"
+                ImagePath="ms-appx:///Assets/Library.png"
+                HorizontalAlignment="Left"
+                Margin="16,16,8,0"
+                Width="240"
+                ButtonWidth="240"/>
+            <localControls:AppButton
+                Title="测试"
+                Subtitle="测试"
+                ImagePath="ms-appx:///Assets/Library.png"
+                HorizontalAlignment="Left"
+                Margin="8,16,8,0"
+                Width="240"
+                ButtonWidth="240"/>
+            <localControls:AppButton
+                Title="测试"
+                Subtitle="测试"
+                ImagePath="ms-appx:///Assets/Library.png"
+                HorizontalAlignment="Left"
+                Margin="8,16,8,0"
+                Width="240"
+                ButtonWidth="240"/>
+            <localControls:AppButton
+                Title="测试"
+                Subtitle="测试"
+                ImagePath="ms-appx:///Assets/Library.png"
+                HorizontalAlignment="Left"
+                Margin="8,16,8,0"
+                Width="240"
+                ButtonWidth="240"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <localControls:AppButton
+            Title="测试"
+            Subtitle="测试"
+            ImagePath="ms-appx:///Assets/Library.png"
+            HorizontalAlignment="Left"
+            Margin="16,16,8,0"
+            Width="240"
+            ButtonWidth="240"/>
+            <localControls:AppButton
+            Title="测试"
+            Subtitle="测试"
+            ImagePath="ms-appx:///Assets/Library.png"
+            HorizontalAlignment="Left"
+            Margin="8,16,8,0"
+            Width="240"
+            ButtonWidth="240"/>
+            <localControls:AppButton
+            Title="测试"
+            Subtitle="测试"
+            ImagePath="ms-appx:///Assets/Library.png"
+            HorizontalAlignment="Left"
+            Margin="8,16,8,0"
+            Width="240"
+            ButtonWidth="240"/>
+            <localControls:AppButton
+            Title="测试"
+            Subtitle="测试"
+            ImagePath="ms-appx:///Assets/Library.png"
+            HorizontalAlignment="Left"
+            Margin="8,16,8,0"
+            Width="240"
+            ButtonWidth="240"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <localControls:AppButton
+            Title="测试"
+            Subtitle="测试"
+            ImagePath="ms-appx:///Assets/Library.png"
+            HorizontalAlignment="Left"
+            Margin="16,16,8,0"
+            Width="240"
+            ButtonWidth="240"/>
+        </StackPanel>
+        <InfoBar
+        Margin="16,30,16,0"
+        IsOpen="True"
+        Width="330"
+        HorizontalAlignment="Left"
+        VerticalAlignment="Bottom"
+        Title="校园网信息&#10;"
+        IsClosable="False"
+        Message="正在加载信息。。。"
+        x:Name="NetworkInfo"/>
+    </StackPanel>
 </Page>
